hphp/hack/test/typecheck/call_in_static_darray.php.coeffects.exp
File "call_in_static_darray.php", line 7, characters 29-34:
Invalid expression in constant initializer (Parsing[1002])
